# budget-app

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  design.txt  todos.txt
migrations/2017-11-25-064638_initial_schema/: down.sql  up.sql
migrations/2017-12-02-234812_update_categories/: down.sql  up.sql
migrations/2017-12-28-165142_add_category_recurring_flag/: down.sql  up.sql
public/: index.js
src/: context.rs  database.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs
src/controllers/: account.rs  category.rs  index.rs  mod.rs  payee.rs  transaction.rs
src/models/: account.rs  category.rs  form_values.rs  mod.rs  payee.rs  transaction.rs
src/models/stash/: payee.rs
templates/: accounts.tera  base.tera  budget.tera  categories.tera  edit_account.tera  edit_payee.tera  index.tera
templates/stash/: budget.tera  edit_account.tera  edit_category.tera  edit_payee.tera  payees.tera
