[package]
name = "budget_app"
version = "0.1.0"
authors = ["esty"]

[dependencies]
bigdecimal = { version = "0.0.11", features = ["serde"] }
chrono = { version = "*", features = ["serde"] }
diesel = { version = "1", features = ["postgres", "extras"] }
dotenv = "*"
num-traits = "*"
r2d2 = "*"
r2d2_diesel = "*"
rocket = "*"
rocket_codegen = "*"
rocket_contrib = { version = "*", default-features = false, features = ["tera_templates"] }
serde = "*"
serde_json = "*"
serde_derive = "*"
uuid = { version = "0.6", features = ["serde"] }
