[package]
name = "budget_app"
version = "0.1.0"
authors = ["esty"]
edition = "2018"

[dependencies]
bigdecimal = { version = "^0.0.14", features = ["serde"] }
chrono = { version = "^0.4.6", features = ["serde"] }
diesel = { version = "^1.4.1", features = ["postgres", "extras"] }
dotenv = "^0.13.0"
num-traits = "^0.2.6"
rocket = "^0.4.0"
rocket_contrib = { version = "^0.4.0", default-features = false, features = ["tera_templates", "diesel_postgres_pool"] }
serde = "^1.0.88"
serde_json = "^1.0.38"
serde_derive = "^1.0.88"
uuid = { version = "^0.6.5", features = ["serde"] }
